# derp-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
bench/: go.mod  go.sum  main.go
bench/conformance/: official_test.go
bench/results/: rss-linux-2026-07-18.csv
bench/rss/: main.go
deploy/: derper-rs.service
docs/: BENCHMARK.md  CONFORMANCE.md  PROTOCOL.md  RSS-BENCHMARK.md
docs/report/: README.md  derp-rs-report.tex
scripts/: benchmark.sh  official-conformance.sh  rss-benchmark.sh
src/: config.rs  crypto.rs  http.rs  lib.rs  main.rs  mesh.rs  metrics.rs  protocol.rs  relay.rs  server.rs  stun.rs
tests/: integration.rs
