[package]
name = "derp-rs"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "High-performance, protocol-compatible Tailscale DERP relay server"
repository = "https://github.com/jaisonZheng/derp-rs"

[lib]
name = "derp_rs"
path = "src/lib.rs"

[[bin]]
name = "derper-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
crypto_box = { version = "0.9.1", features = ["std"] }
crc32fast = "1.4"
dashmap = "6.1"
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
http = "1.3"
httparse = "1.10"
parking_lot = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
socket2 = { version = "0.6", features = ["all"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
webpki-roots = "1.0"

[dev-dependencies]
proptest = "1.7"
tempfile = "3.20"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
